{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "ea29ca5e-47fa-6e4a-48e4-edcd7207f362",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testvm1_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/testvm1-nic1",
            "internal_domain_name_suffix": "oswwkwztkere3guaxc1jik4cyf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testvm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.48.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/testvm-pip1",
                "subnet_id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/Dev-vnet1/subnets/vnet1-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "testvm1-nic1",
            "private_ip_address": "10.48.1.4",
            "private_ip_addresses": [
              "10.48.1.4"
            ],
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_public_ip.testvm_pip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.vnet1-subnet-1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "devrg1-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1",
            "location": "westus2",
            "name": "rg1-nsg1",
            "resource_group_name": "rg1",
            "security_rule": [],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "devrg1-nsg1-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all",
            "name": "allow-all",
            "network_security_group_name": "rg1-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "devrg1-nsg1-allow-all-functions",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-22",
            "name": "allow-all-functions-22",
            "network_security_group_name": "rg1-nsg1",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-80",
            "name": "allow-all-functions-80",
            "network_security_group_name": "rg1-nsg1",
            "priority": 111,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-9000",
            "name": "allow-all-functions-9000",
            "network_security_group_name": "rg1-nsg1",
            "priority": 112,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "9000",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-3389",
            "name": "allow-all-functions-3389",
            "network_security_group_name": "rg1-nsg1",
            "priority": 113,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "3389",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-443",
            "name": "allow-all-functions-443",
            "network_security_group_name": "rg1-nsg1",
            "priority": 114,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "443",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1/securityRules/allow-all-functions-8080",
            "name": "allow-all-functions-8080",
            "network_security_group_name": "rg1-nsg1",
            "priority": 115,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testvm_pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/testvm-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.65.113.201",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "testvm-pip1",
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.48.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/Dev-vnet1/subnets/vnet1-subnet-1",
            "name": "vnet1-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "Dev-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/Dev-vnet1/subnets/vnet1-subnet-1",
            "network_security_group_id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/rg1-nsg1",
            "subnet_id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/Dev-vnet1/subnets/vnet1-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.devrg1-nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.vnet1-subnet-1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.48.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5b65ad74-5133-4e22-9a80-b8b6942bc2c5",
            "id": "/subscriptions/4879f329-b467-46e8-9912-49f66c238cdd/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/Dev-vnet1",
            "location": "westus2",
            "name": "Dev-vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}